--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	},
 	"dependencies": {
 		"@monaco-editor/react": "^4.6.0",
+		"@tldraw/sync": "^2.4.6",
 		"install": "^0.13.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
